--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -32,7 +32,7 @@ input[type=number],
 input[type=email],
 input[type=tel],
 input[type=password],
-input[type=text]{appearance: none; -webkit-appearance: none; -moz-appearance: none;  box-shadow: none; border: 1px solid #ccc; background: #fff; padding: 0 10px; height: 42px; font-size: 14px; }
+input[type=text]{appearance: none; -webkit-appearance: none; -moz-appearance: none;  box-shadow: none; border: 1px solid #666; background: #333; padding: 0 10px; height: 42px; font-size: 14px; }
 
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
