--- a/src/components/modules/login/signup.module.scss
+++ b/src/components/modules/login/signup.module.scss
@@ -8,6 +8,7 @@
     article{
         + article{margin-top: 25px;}
         > div{
+            + div{margin-top: 10px;}
             display: flex;
             align-items: center;
             gap: 10px;
@@ -18,4 +19,13 @@
     }
 
     .bottomBtn{margin-top: 50px;}
+
+    .withdraw{
+        text-align: center;
+        margin-top: 20px;
+        button{
+            color: #999;
+            text-decoration: underline;
+        }
+    }
 }
