--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -26,13 +26,13 @@ select::-ms-expand {display:none}
 
 /* form reset */
 input:focus{outline: none;}
-select{appearance: none; -moz-appearance: none; -webkit-appearance: none;  -ms-appearance: none;  border: 1px solid #ccc; padding: 0 10px; padding-right: 20px; background: #fff no-repeat center right 10px/10px;background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%23ccc' viewBox='0 0 24 24'%3E%3Cpath d='M0 7.33l2.829-2.83 9.175 9.339 9.167-9.339 2.829 2.83-11.996 12.17z'/%3E%3C/svg%3E");}
+select{appearance: none; -moz-appearance: none; -webkit-appearance: none;  -ms-appearance: none;  border: 1px solid #666; color: #eee; height: 42px; border-radius: 3px; padding: 0 10px; padding-right: 20px; background: #333 no-repeat center right 10px/10px;background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='%23ccc' viewBox='0 0 24 24'%3E%3Cpath d='M0 7.33l2.829-2.83 9.175 9.339 9.167-9.339 2.829 2.83-11.996 12.17z'/%3E%3C/svg%3E");}
 select:focus{outline: none;}
 input[type=number],
 input[type=email],
 input[type=tel],
 input[type=password],
-input[type=text]{appearance: none; -webkit-appearance: none; -moz-appearance: none;  box-shadow: none; border: 1px solid #666; background: #333; padding: 0 10px; height: 42px; font-size: 14px; }
+input[type=text]{appearance: none; -webkit-appearance: none; -moz-appearance: none;  box-shadow: none; border: 1px solid #666; border-radius: 3px; background: #333; color: #eee; padding: 0 10px; height: 42px; font-size: 14px; }
 
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
